--- a/public_html/styles/rickies.css
+++ b/public_html/styles/rickies.css
@@ -2793,8 +2793,10 @@ mark {
     grid-gap: var(--space-between-lg);
   }
 }
-#pick_filter_sheet > .content > fieldset.categories > fieldset:not(:last-child) > ul > li {
-  margin-right: -24px;
+@media screen and (min-width: 576px) {
+  #pick_filter_sheet > .content > fieldset.categories > fieldset:not(:last-child) > ul > li {
+    margin-right: -24px;
+  }
 }
 #pick_filter_sheet > .content > fieldset.categories > fieldset > ul > li ul {
   margin-top: 4px;
